# example_resin

./: .gitignore  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
resin/: asgi.py  settings.py  urls.py  wsgi.py
resin/core/: admin.py  apps.py  middlewares.py  models.py  serializers.py  views.py
resin/core/migrations/: 0001_initial.py
web/: package.json
