[tool.poetry]
name = "resin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-rest-framework = "^0.1.0"
drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=120